--- a/src/Details/Details.css
+++ b/src/Details/Details.css
@@ -23,8 +23,9 @@
   border: none;
   cursor: pointer;
   border-radius: 0.5rem;
-  margin-left: 7%;
-  position: absolute;
+  margin-left: 0%;
+  margin-bottom: 0%;
+  /* position: absolute; */
 }
 
 .btn:hover {
@@ -57,7 +58,7 @@
   border: none;
   cursor: pointer;
   border-radius: 0.5rem;
-  margin-left: 55%;
+  margin-left: 3%;
   position: absolute;
 }
 .btn-addToCart:hover {
@@ -82,4 +83,30 @@
 
 .caution {
   color: #dc3545;
+}
+
+.btn-addToCart1 {
+  display: inline-block;
+  font-size: 15px;
+  color: #fff;
+  background: #333;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+  border-radius: 0.5rem;
+  margin-left: 15%;
+  position: absolute;
+}
+
+/*size1*/
+.size1 {
+  font-size: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.checking {
+  margin-top: 3%;
+  margin-bottom: 3%;
+  position: center;
 }
