--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,6 +1,6 @@
 #showcase {
   background: url("../assets/bg1.jpg") no-repeat center center/cover;
-  height: 600px;
+  height: 600%;
 }
 
 .text-primary1 {
@@ -11,24 +11,24 @@
   font-size: 20px;
 }
 
-#showcase .showcase-content {
+#showcase .showcase-content-home {
   color: #fff;
   text-align: center;
   padding-top: 170px;
 }
 
-#showcase .showcase-content h1 {
+#showcase .showcase-content-home h1 {
   font-size: 60px;
   line-height: 1.2em;
   padding-bottom: 20px;
 }
 
-#showcase .showcase-content p1 {
+#showcase .showcase-content-home p1 {
   padding-bottom: 20px;
   line-height: 1.7em;
 }
 
-.btn {
+.btn-home {
   display: inline-block;
   font-size: 18px;
   color: #fff;
@@ -38,12 +38,12 @@
   cursor: pointer;
 }
 
-.btn:hover {
+.btn-home:hover {
   background: #f7c08a;
   color: #333;
 }
 
-.btn-light {
+.btn-home-light {
   background: #f4f4f4;
   color: #333;
 }
@@ -59,34 +59,46 @@
 }
 
 /* Home Info */
-#contact-info {
+#contact-info-home {
   height: 300px;
 }
 
-#contact-info .info-content1 {
+#contact-info-home .info-content1 {
   float: right;
   width: 100%;
   height: 100%;
+  text-align: center;
+  padding: 30px 30px;
+  overflow: hidden;
+}
+
+#contact-info-home .info-content2 {
+  float: right;
+  width: 100%;
+  height: 50%;
   text-align: center;
   padding: 0px 30px;
   overflow: hidden;
 }
 
-#contact-info .info-content2 {
-  float: right;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  padding: 100px 30px;
-  overflow: hidden;
+#contact-info-home .info-content1 p-home {
+  padding-bottom: 10px;
+
+  font-size: 16px;
+}
+#contact-info-home .info-content1 p1-home {
+  padding-bottom: 0px;
+
+  font-size: 16px;
 }
 
-#contact-info .info-content1 p1 {
+#contact-info-home .info-content3 p2-home {
   padding-bottom: 10px;
+  font-size: 16px;
 }
 
-#contact-info .info-content2 p1 {
-  padding-bottom: 10px;
+#contact-info-home .info-content3 h3 {
+  padding-bottom: 0px;
 }
 
 .text-primary2 {
@@ -94,5 +106,126 @@
 }
 
 .text-primary3 {
+  /* padding-top: 10px; */
   color: #da884e;
+}
+
+@media only screen and (max-width: 600px) {
+  #showcase {
+    background: url("../assets/bg1.jpg") no-repeat center center/cover;
+    height: 600%;
+  }
+
+  .text-primary1 {
+    color: #da884e;
+  }
+
+  .lead {
+    font-size: 18px;
+  }
+
+  #showcase .showcase-content-home {
+    color: #fff;
+    text-align: center;
+    padding-top: 50px;
+  }
+
+  #showcase .showcase-content-home h1 {
+    font-size: 60px;
+    line-height: 1.2em;
+    padding-bottom: 5px;
+  }
+
+  #showcase .showcase-content-home p1 {
+    padding-bottom: 20px;
+    line-height: 1.7em;
+  }
+
+  .btn-home {
+    display: inline-block;
+    font-size: 18px;
+    color: #fff;
+    background: #333;
+    padding: 13px 20px;
+    border: none;
+    cursor: pointer;
+  }
+
+  .btn-home:hover {
+    background: #f7c08a;
+    color: #333;
+  }
+
+  .btn-home-light {
+    background: #f4f4f4;
+    color: #333;
+  }
+
+  .bg-dark {
+    background: rgb(92, 91, 91);
+    color: #fff;
+  }
+
+  .bg-primary {
+    background: #f7c08a;
+    color: #333;
+  }
+
+  /* Home Info */
+  #contact-info-home {
+    height: 300px;
+  }
+
+  #contact-info-home .info-content1 {
+    float: right;
+    width: 100%;
+    height: 110%;
+    text-align: center;
+    padding: 30px 30px;
+    overflow: hidden;
+  }
+  #contact-info-home .info-content2 h2 {
+    padding-bottom: 0px;
+
+    font-size: 20px;
+  }
+
+  #contact-info-home .info-content2 {
+    float: right;
+    width: 100%;
+    height: 40%;
+    text-align: center;
+    padding: 0px 10px;
+    overflow: hidden;
+  }
+
+  #contact-info-home .info-content1 p-home {
+    padding-bottom: 10px;
+
+    font-size: 10px;
+  }
+  #contact-info-home .info-content1 p1-home {
+    padding-bottom: 0px;
+
+    font-size: 10px;
+  }
+
+  #contact-info-home .info-content3 p2-home {
+    padding-bottom: 10px;
+    font-size: 10px;
+  }
+
+  #contact-info-home .info-content3 h3 {
+    padding-bottom: 0px;
+    font-size: 20px;
+  }
+
+  .text-primary2 {
+    color: #da884e;
+  }
+
+  .text-primary3 {
+    /* padding-top: 10px; */
+    color: #da884e;
+  }
 }
